# nqueens-demo

./: .gitmodules  README.md  app-icon.pxd  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: publish.yml
src-cpp/: CMakeLists.txt
src-cpp/gecode-solver/: CMakeLists.txt  gecode-solver.cpp  gecode-solver.hpp
src-cpp/include/: backend.hpp  solver.hpp
src-cpp/src/: backend.cpp
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-web/: app.tsx  main.tsx  style.css
